apps/base/linkding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
